[gd_scene load_steps=2 format=3 uid="uid://d0lgtj5ihb0ut"]

[ext_resource type="Script" path="res://prog_122a.gd" id="1_q0825"]

[node name="Prog_122a" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_q0825")

[node name="ItemList" type="ItemList" parent="."]
layout_mode = 0
offset_right = 1149.0
offset_bottom = 492.0

[node name="btnCalc" type="Button" parent="."]
layout_mode = 0
offset_left = 1.0
offset_top = 543.0
offset_right = 262.0
offset_bottom = 647.0
text = "Calculate"

[node name="btnClear" type="Button" parent="."]
layout_mode = 0
offset_left = 891.0
offset_top = 547.0
offset_right = 1152.0
offset_bottom = 651.0
text = "Exit"

[node name="btnExit" type="Button" parent="."]
layout_mode = 0
offset_left = 448.0
offset_top = 544.0
offset_right = 709.0
offset_bottom = 648.0
text = "Clear"

[connection signal="pressed" from="btnCalc" to="." method="_on_btn_calc_pressed"]
[connection signal="pressed" from="btnClear" to="." method="_on_btn_clear_pressed"]
[connection signal="pressed" from="btnExit" to="." method="_on_btn_exit_pressed"]
